test_suite/alan-2022-examples/failing/002840_mutation.alan
source IG begin K5 put 8 end
